削除apiの実装
